# SGGW_Implementacja_systemow_AI

./: .gitignore  README.md  pyproject.toml  requirements.txt  slownik_ml_mlops.md
docs/: index.html
przyklad_01/: notebook_before.ipynb
przyklad_01/refactored/: main.py
przyklad_02/: experiment.py  experiment2.py  ladowanie_modeli.py
przyklad_03/: MLproject  train.py
przyklad_04/.dvc/: config
przyklad_04/data/: example.csv.dvc
przyklad_05/: dvc.yaml  metrics.json  params.yaml
przyklad_05/data/: .gitignore
przyklad_05/src/: download_data.py  prepare_data.py  train_model.py
przyklad_06/: optuna_mlflow.py
przyklad_07/: bentofile.yaml  service.py  trenowanie.py
zadanie_02/: README.md  starter.py
zadanie_02/rozwiazanie/: solution.py
zadanie_03/: README.md  train.py
zadanie_03/rozwiazanie/: MLproject  python_env.yaml  train.py
zadanie_04/: README.md
zadanie_04/rozwiazanie/: dvc.yaml  params.yaml
zadanie_04/src/: download_data.py  evaluate.py  prepare_data.py  train_model.py
zadanie_05/: README.md  starter.py
zadanie_05/rozwiazanie/: solution.py
zadanie_06/: README.md
zadanie_06/rozwiazanie/: bentofile.yaml  service.py  train_model.py
zadanie_zaliczeniowe/: README.md  a.ipynb  bentofile.yaml  dev-requirements.txt  dvc.yaml  main.py  requirements.txt
zadanie_zaliczeniowe/.dvc/: config
zadanie_zaliczeniowe/config/: config.yaml
zadanie_zaliczeniowe/metrics/: metrics.json
zadanie_zaliczeniowe/models/: .gitignore  encoder.pkl  model.pkl
zadanie_zaliczeniowe/notebooks/: penguin_testing.ipynb
zadanie_zaliczeniowe/src/: service.py  (+4 more)
(+10 files in other folders)
