[project]
name = "imp-sys-ai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14.3"
dependencies = [
    "bentoml==1.4.35",
    "dvc==3.66.1",
    "kaleido==0.2.1",
    "matplotlib==3.10.8",
    "mlflow==3.9.0",
    "numpy==2.4.2",
    "optuna==4.2.1",
    "optuna-integration[mlflow]==4.2.1",
    "pandas==2.3.3",
    "plotly==6.0.1",
    "pydantic==2.12.5",
    "python-dotenv==1.2.1",
    "scikit-learn==1.8.0",
    "seaborn==0.13.2",
]
